Fixed email component issue where subject and email sender lines were not responsive.

--- a/src/components/sass/Emailer.scss
+++ b/src/components/sass/Emailer.scss
@@ -3,7 +3,7 @@
 	border: 0;
 	border-radius: 10px;
 	padding: 10px;
-	margin-top: 10px;
+	margin-top: 15px;
 	margin-bottom: 20px;
 	background: #364156;
 	color: white;
@@ -15,11 +15,11 @@
 }
 
 #subject {
-	width: 30vw;
+	width: 50vw;
 }
 
 #email {
-	width: 30vw;
+	width: 50vw;
 }
 
 #emailer {
@@ -56,12 +56,16 @@
 }
 
 textarea {
-  width:100%;
+  width: 100%;
   resize: none;
   padding:15px;
   border-radius:15px;
   border:0;
   box-shadow:4px 4px 10px rgba(0,0,0,0.06);
+}
+
+.form {
+	width: 50vw;
 }
 
 input[type=text] {
